dataset1235/2025-2/805158916/users/2029902540/executions/2118643220_2249045874.log
== RUN (2025-09-01 14:21:04)
-- CODE: 
from math import *
math.pi

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.pi
    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.pi
    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.pi
    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.pi
    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.pi
    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.pi
    ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:43:12)
-- CODE: 
from math import *
apotema = lado / 2 * tan(math.pi / 8)
Area = 4 * lado * apotema
lado = float(input("Qual o valor do lado?: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
              ^^^^
NameError: name 'lado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:44:06)
-- CODE: 
import math
lado = float(input("Qual o valor do lado?: "))
apotema = lado / 2 * tan(math.pi / 8)
Area = 4 * lado * apotema
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                         ^^^
NameError: name 'tan' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                         ^^^
NameError: name 'tan' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                         ^^^
NameError: name 'tan' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                         ^^^
NameError: name 'tan' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                         ^^^
NameError: name 'tan' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                         ^^^
NameError: name 'tan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:55:32)
-- CODE: 
import math
lado = float(input("Qual o valor do lado?: "))
apotema = lado / 2 * math.tan math.pi / 8
Area = 4 * lado * apotema
print(round(Area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 * math.tan math.pi / 8
                                  ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 * math.tan math.pi / 8
                                  ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 * math.tan math.pi / 8
                                  ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 * math.tan math.pi / 8
                                  ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 * math.tan math.pi / 8
                                  ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 * math.tan math.pi / 8
                                  ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:45:36)
-- CODE: 
import math
lado = float(input("Qual o valor do lado?: "))
apotema = lado / 2 * math.tan(math.pi / 8)
Area = 4 * lado * apotema
print(Area , 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Qual o valor do lado?: 13.254833995939041 2
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Qual o valor do lado?: 53.019335983756164 2
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71067811865475 2
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71067811865475 2
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Qual o valor do lado?: 67.1025971044414 2
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Qual o valor do lado?: 29.823376490862845 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:43:33)
-- CODE: 
from math import *
lado = float(input("Qual o valor do lado?: "))
apotema = lado / 2 * tan(math.pi / 8)
Area = 4 * lado * apotema
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                             ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                             ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                             ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                             ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                             ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 * tan(math.pi / 8)
                             ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:08:42)
-- CODE: 
import math
lado = float(input("Qual o valor do lado?: "))
apotema = lado / 2 * math.tan(math.pi / 8)
area = 4 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Qual o valor do lado?: 13.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Qual o valor do lado?: 53.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Qual o valor do lado?: 67.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Qual o valor do lado?: 29.82
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:51:20)
-- CODE: 
import math
lado = float(input("Qual o valor do lado?: "))
apotema = lado / 2 * math.tan(math.pi / 8)
Area = 4 * lado * apotema
print(round(Area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Qual o valor do lado?: 13.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Qual o valor do lado?: 53.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Qual o valor do lado?: 67.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Qual o valor do lado?: 29.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:44:32)
-- CODE: 
import math
lado = float(input("Qual o valor do lado?: "))
apotema = lado / 2 * math.tan(math.pi / 8)
area = 4 * lado * apotema
print((area))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Qual o valor do lado?: 13.254833995939041
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Qual o valor do lado?: 53.019335983756164
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71067811865475
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71067811865475
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Qual o valor do lado?: 67.1025971044414
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Qual o valor do lado?: 29.823376490862845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:45:50)
-- CODE: 
import math
lado = float(input("Qual o valor do lado?: "))
apotema = lado / 2 * math.tan(math.pi / 8)
Area = 4 * lado * apotema
print(Area, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Qual o valor do lado?: 13.254833995939041 2
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Qual o valor do lado?: 53.019335983756164 2
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71067811865475 2
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71067811865475 2
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Qual o valor do lado?: 67.1025971044414 2
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Qual o valor do lado?: 29.823376490862845 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:18:57)
-- CODE: 
from math import *
math.tan
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.tan
    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.tan
    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.tan
    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.tan
    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.tan
    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math.tan
    ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:44:38)
-- CODE: 
import math
lado = float(input("Qual o valor do lado?: "))
apotema = lado / 2 * math.tan(math.pi / 8)
area = 4 * lado * apotema
print((area))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Qual o valor do lado?: 13.254833995939041
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Qual o valor do lado?: 53.019335983756164
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71067811865475
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71067811865475
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Qual o valor do lado?: 67.1025971044414
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Qual o valor do lado?: 29.823376490862845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:43:33)
-- CODE: 
import math
lado = float(input("Qual o valor do lado?: "))
apotema = lado / 2 * math.tan(math.pi / 8)
area = 4 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Qual o valor do lado?: 13.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Qual o valor do lado?: 53.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Qual o valor do lado?: 20.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Qual o valor do lado?: 67.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Qual o valor do lado?: 29.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
